public/style.css
/* ... */
#sideShare {
    position: absolute;
    right: 150px;
    top: -6px;
}

.stratIcon {
    background-repeat: no-repeat;
    background-image: url(images/strat-section-icon2.png);
    position: absolute;
    left: 30px;
    top: 0px;
    width: 30px;
    height: 30px;
    cursor: pointer;
    z-index: 9;

}

.pinIt {
    background-repeat: no-repeat;
    background-image: url(images/pinIt.png);
    position: absolute;
    left: 0px;
    top: 0px;
    width: 30px;
    height: 30px;
    cursor: pointer;
    z-index: 9;

}

.inView {
    background-repeat: no-repeat;
    background-image: url(images/inView.png);
    position: absolute;
    left: 30px;
    top: 0px;
    width: 30px;
    height: 30px;
    cursor: pointer;
    z-index: 9;

}

.mapsHere {
    background-repeat: no-repeat;
    background-image: url(images/mapsHere.png);
    position: absolute;
    left: 60px;
    top: 0px;
    width: 30px;
    height: 30px;
    cursor: pointer;
    z-index: 9;

}

.linkTo {
    background-repeat: no-repeat;
    background-image: url(images/linkTo2.png);
    position: absolute;
    left: 65px;
    top: 5px;
    width: 30px;
    height: 30px;
    background-color: transparent;
    cursor: pointer;
    z-index: 9;
}

.panTo {
    background-repeat: no-repeat;
    background-image: url(images/panTo.png);
    position: absolute;
    left: 90px;
    top: 0px;
    width: 30px;
    height: 30px;
    background-color: transparent;
    cursor: pointer;
    z-index: 9;
}

.zoomTo {
    background-repeat: no-repeat;
    background-image: url(images/zoomTo.png);
    position: absolute;
    left: 120px;
    top: 0px;
    width: 30px;
    height: 30px;
    background-color: transparent;
    cursor: pointer;
    z-index: 9;
}


.close {
    position: absolute;
    right: 3px;
    top: 1px;
    width: 25px;
    height: 25px;
    background-image: url(images/close.png);
    cursor: pointer;
    z-index: 10;
}
.dl-close {
    position: absolute;
    right: 0px;
    top: 10px;
    width: 25px;
    height: 25px;
    background-image: url(images/close.png);
    cursor: pointer;
    z-index: 10;
}
.esri-icon-down-arrow, .esri-icon-up-arrow {
    position: absolute;
    top: 4px;
    right: 12px;
    font-weight: 500 !important;
    color: white !important;
    font-size: 20px !important;
    cursor: pointer;
    z-index: 10;
}

#mapCount {
    position: absolute;
    top: 33px;
    right: -30px;
    height: 58px;
    width: 58px;
    font-family: "Bebas Neue Regular", Verdana, sans-serif;
    font-size: 30px;
    letter-spacing: -2px;
    text-align: center;
    padding-top: 22px;
    text-indent: -1px;
    z-index: 8;
    cursor: pointer;
}

.dot {
    -webkit-border-radius: 50%;
    -moz-border-radius: 50%;
    border-radius: 50%;
    -khtml-border-radius: 50%;
}

/*   style for the word "maps"  */
.countSmall {
    position: absolute;
    top: 80px;
    right: -20px;
    font-family: "Corbel Regular";
    font-size: 11pt;
    letter-spacing: -1px;
    z-index: 9;
}

hr {
    border: 0;
    height: 0;
    border-top: 1px solid rgba(0,0,0,.1);
    border-bottom: 1px solid rgba(255,255,255,.3);
}

p:last-child {
    margin-bottom: 0;
}

.leaflet-container a {
    color: #3887BE;
    font-weight: 400;
    text-decoration: none;
}

.leaflet-container h1, .leaflet-container h2,
.leaflet-container h3, .leaflet-container h4,
.leaflet-container h5, .leaflet-container h6,
.leaflet-container p {
    font-size: 15px;
    line-height: 20px;
    margin: 0 0 10px;
}


#unitsPane {
    font-family: "Avenir Next W00","Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 13px;
    color:#3f3f3f;
    position: absolute;
    bottom: 0px;
    right: -5px;
    max-height:75%;
    width: 300px;
    z-index: 99;
    border-radius: 6px;
    padding: 8px;
    margin: 5px;
    overflow-y: auto;
    opacity: 0.85;
    background-color: white;
}

.unit-desc-title {
    font-size: 15px;
    font-weight: 600;
}
.unit-age {
    font-size: 12px;
    line-height: 15px;
    font-weight: 600;
    color: #0079c1;
}
.unit-desc-text {
    font-size: 13px;
    line-height: 15px;
}
.unit-desc-ref {
    font-size: 10px; 
    margin-top: 8px
}
.map-ref {
    font-size: 10px;
    line-height: 12px;
}

/* basemap layer controls */
.baseswitch {
    position: absolute;
    left: 50px;
    top: 10px;
    z-index: 99;
}

.terrain {
    background-repeat: no-repeat;
    background-image: url(images/terBase.png);
    position: absolute;
    width: 35px;
    height: 35px;
    left: 55px;
    z-index: 999;
}

.hybrid {
    background-repeat: no-repeat;
    background-image: url(images/satBase.png);
    position: absolute;
    width: 35px;
    height: 35px;
    left: 95px;
}

.ustopo {
    background-repeat: no-repeat;
    background-image: url(images/strBase.png);
    position: absolute;
    width: 35px;
    height: 35px;
    left: 135px;
}
/* highlight the active basemap icon */
.activebase {
    background-color: #6396fc !important;
}

.mouse-info {
    display: inline-block;
    position: absolute;
    bottom:20px;
    left:50%;
    text-align: center;
    font-family: 'Open Sans SemiBold';
    font-size: 9pt;
    color: #fff;
    text-shadow: 0 0 2px #000,0 0 2px #000,0 0 2px #000;
    filter: glow(color=black,strength=1);
}

.scale {
    margin: 0 auto;
    position: relative;
    z-index: 7;
}

.mouseposition {
    margin: 0 auto;
    position: relative;
    z-index: 7;
}

.mapundercusor{
    margin: 0 auto;
    position: relative;
    z-index: 7;
    font-size: 10px;
}

.dijitButtonNode {
    border: 0 !important;
    display:none;
}
/* ... */

